Bug #7355
beadm list -H outputs garbage
Start date:
2016-09-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
When running beadm list -H in the non-global zone I receive the following output:
zbe-77;(null);xb;;7707648;static;1466692560 zbe-78;(null);x;;2781184;static;1467397831 zbe-78-backup-1;(null);x;;1024;static;1470180569 zbe-78-backup-2;(null);x;;80896;static;1470180706 zbe-78-backup-3;(null);x;;207872;static;1470180895 zbe-78-backup-4;(null);x;;206848;static;1470244222 zbe-78-backup-5;(null);x;;182272;static;1470417817 zbe-78-backup-6;(null);x;;78848;static;1470730004 zbe-80;(null);x;;1498112;static;1470730562 zbe-81;(null);x;;384221696;static;1470759829 zbe-84;(null);x;;1385377792;static;1471277050 zbe-85;(null);x;;2223104;static;1471459159 zbe-85-backup-1;(null);x;;881664;static;1471636735 zbe-85-backup-2;(null);x;;3142656;static;1471636878 zbe-86;(null);xb;;3626496;static;1472084046 zbe-87;(null);NR;/;122683286016;static;1472555809 zbe-87-backup-1;(null);;;2038784;static;1472637419 zbe-87-backup-2;(null);;;2039808;static;1472637487 zbe-87-backup-3;(null);;;2039808;static;1472637672 foo;(null);;/tmp/tmp.O5a4IM;1024;static;1472819273
The second column should be either uuid or nothing, not (null).
Updated by Electric Monk about 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 9def5563fc64d4e5dd457cd3c43ba42d1aebe9b3
commit 9def5563fc64d4e5dd457cd3c43ba42d1aebe9b3 Author: James McFadyen <jamesmcfadyen@gmail.com> Date: 2017-02-06T05:09:43.000Z 7355 beadm list -H outputs garbage Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Adam Stevko <adam.stevko@gmail.com> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>