7355 beadm list -H outputs garbage Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Adam Stevko <adam.stevko@gmail.com> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>